# fun-things

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
tiny_breakout_web/: game.js  index.html  style.css
tiny_dungeon/: __init__.py  __main__.py  dungeon.py  entities.py  items.py  screens.py  state.py
tiny_dungeon_web/: game.js  index.html  style.css
tiny_puzzle_web/: game.js  index.html
tiny_space_web/: game.js  index.html  style.css
tiny_td_web/: game.js  index.html  style.css
