[project]
name = "tiny-dungeon"
version = "0.1.0"
description = "A tiny roguelike dungeon crawler in the terminal"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = "MIT"
authors = [{ name = "h2b" }]
keywords = ["roguelike", "dungeon", "terminal", "game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.scripts]
tiny-dungeon = "tiny_dungeon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
